--- a/autores.html
+++ b/autores.html
@@ -39,7 +39,7 @@
                                 <li><strong>Código:</strong> 123456789</li>
                                 <li><strong>Programa:</strong> Ingeniería de Sistemas</li>
                                 <li><strong>Universidad:</strong> Universidad de Córdoba</li>
-                                <li><strong>Correo:</strong> <a href="mailto:jriosquinonez40@correo.unicordoba.edu.co">jose.rios@correo.unicordoba.edu.co</a></li>
+                                <li><strong>Correo:</strong> <a href="mailto:jriosquinonez40@correo.unicordoba.edu.co">jriosquinonez40@correo.unicordoba.edu.co</a></li>
                                 <li><strong>GitHub:</strong> <a href="https://github.com/j0se25" target="_blank">github.com/j0se25</a></li>
                             </ul>
                         </div>
@@ -57,7 +57,7 @@
         </section>
     </div>
     <footer>
-        <p>© 2023 OVI Lógica Computacional - Todos los derechos reservados</p>
+        <p>© 2025 OVI Lógica Computacional - Todos los derechos reservados</p>
         <p>Desarrollado por José Andrés Ríos Quiñonez</p>
         <p>Ingeniería de Sistemas - Universidad de Córdoba</p>
     </footer>
