--- a/multimedia.html
+++ b/multimedia.html
@@ -26,16 +26,25 @@
         <section>
             <article>
                 <h2 class="citation">Contenidos Multimedia</h2>
-                <p>En este apartado encontrará contendio multimedia recomendado 
-                    para qeu afiance sus conocimientos sobre el tema de <b>Lógica Computacional</b>. <br>
-                    Aquí se le asignarán algunos videos para ver.</p> <br>
-
-                <h3 class="citation">Curso de lógica de programación</h3><br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/TdITcVD64zI?si=Mqxq9xLVH2wMwZQm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h3 class="citation">Condicionales en Python</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/UhK8TKkEoNI?si=Kwl5ydJ3Hu4reSA7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h3 class="citation">Bucles y filtros</h3>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/UhK8TKkEoNI?si=Kwl5ydJ3Hu4reSA7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p>En este apartado encontrará contenido multimedia recomendado para que afiance sus conocimientos sobre el tema de <b>Lógica Computacional</b>.</p>
+            
+                <div class="video-container">
+                    <iframe class="youtube-iframe" src="https://www.youtube.com/embed/TdITcVD64zI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+                    <div class="video-info">
+                        <h3 class="citation">Curso de lógica de programación</h3>
+                        <div class="video-title">LÓGICA DE PROGRAMACIÓN</div>
+                        <div class="video-meta">DESDE CERO • 7 HORAS</div>
+                    </div>
+                </div>
+            
+                <div class="video-container">
+                    <iframe class="youtube-iframe" src="https://www.youtube.com/embed/UhK8TKkEoNI" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+                    <div class="video-info">
+                        <h3 class="citation">Condicionales en Python</h3>
+                        <div class="video-title">PYTHON DESDE 0</div>
+                        <div class="video-meta">ELSE - ELIF • 13 MIN</div>
+                    </div>
+                </div>
             </article>
         </section>
     </div>
