--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section id="autores">
         <div class="author-info">
-            <img src="foto-autor.jpg" alt="Autor del OVI">
+            <img src="foto.jpg" alt="Autor del OVI">
             <div>
                 <h3>José Andrés Ríos Quiñonez</h3>
                 <p>Correo: andresquinon25@gmail.com</p>
